# QSO-FABRIC

./: README.md  changelog.md  punchlist.md  release.md  requirements-mcp.txt  requirements-warp.txt  taskchain.md
architecture/: self_learning_scaffold.json
config/: fabric_benchmarks.yaml
docs/: ALISTAIRE_ROLE.md  ARCHITECTURE.md  CANDIDATE_GOVERNANCE.md  DEVELOPER_GUIDE.md  FORMAT_GOVERNANCE.md  OBSTRUCTION_AND_GLUING.md  OUTPUT_CONTRACTS.md  QSO-GLYPH-1.md  QSO-HILBERT-1.md  RECONCILIATION_PROVENANCE.md  ROADMAP.md  SCAFFOLD_SCOPE.md  SELF_LEARNING_MILESTONE_TWO.md  cryptographic-fabric.md  index.html  qso-mcp-server.md
dynamic-twin/: README.md  pyproject.toml
dynamic-twin/schemas/: observation.schema.json  twin-manifest.schema.json
dynamic-twin/src/qso_twins/: __init__.py  ledger.py  materializer.py  models.py
dynamic-twin/tests/: test_models.py  test_runtime.py
memory/: MEMORY_POLICY.md
qso_mcp_server/: __init__.py  runtime.py  server.py
qso_runtime/: __init__.py  alistaire_field.py  constellation.py  crypto_fabric.py  crypto_probe.py  curiosity_engine.py  emergence_garden.py  experimenters.py  four_qso_experiment.py  glyph_manifest.py  glyphs.py  graph_persistence.py  gromerical_engine.py  gromerical_orchestrator.py  hilbert_glyphs.py  hilbert_manifest.py  laser_refraction_fusion.py  learning_milestone_three.py  learning_persistence.py  learning_safety_invariants.py  model_audit_envelope.py  review_operations.py  security_boundary.py  seeker_mcp_server.py  seeker_sprites.py  self_learning_cycle.py  warp_field_experiment.py
tests/: test_glyphs.py  (+29 more)
(+128 files in other folders)
