[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qso-twins"
version = "0.1.0"
description = "Autonomous, continuously synchronized digital twins for QSO Fabric"
requires-python = ">=3.11"
license = {text = "Proprietary or repository license"}
authors = [{name = "QSO Fabric Contributors"}]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
